--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Website</title>
+    <title>Idle Shelter</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
   <body>
     <main>
-        <h1>Welcome to My Website</h1>  
+        <h1>Idle Shelter</h1>  
     </main>
 	<script src="index.js"></script>
+	<script language="javascript">
+    		document.location.href = "https://sites.google.com/view/idleshelter";
+	</script>
   </body>
 </html>
